Fix killOp to actually work with sharding SERVER-4251